<resources>
    <string name="app_name">Admin vote</string>
    <string name="app_developTitleName">Developed By Hariharan</string>
    <string name="label_name">Name</string>
    <string name="label_lastName">Last Name</string>
    <string name="label_dob">Date of Birth</string>
    <string name="label_age">Age</string>
    <string name="label_dateOfJoining">Date of Joining</string>
    <string name="label_gender">Gender</string>
    <string name="label_head">Create Voter</string>
    <string name="label_voter">Voter ID</string>
    <string name="label_phone">Phone no</string>
    <string name="label_mailId">Mail ID</string>
    <string name="label_aadhaar">Aadhaar No</string>
    <string name="label_address">Address</string>
    <string name="label_fatherName">Father Name</string>
    <string name="label_ward">Ward No</string>
    <string name="label_state">State</string>
    <string name="label_district">District</string>
    <string name="label_assembly">Assembly</string>
    <string name="label_partyName">Party Name</string>
    <string name="label_promises">Promises</string>
    <string name="label_background">Describe about me</string>
    <string name="label_positionHeld">Position Held</string>
    <string name="label_numberOfVote">Number of Vote</string>

    <string name="label_qualification">Qualification</string>
    <string name="label_assembly_constituency">Assembly Constituency</string>
    <string name="label_epic">EPIC No</string>
    <string name="btn_push">submit</string>


    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="radio_trans_gender">Trans Gender</string>
    <string name="radio_nomention">No Mention</string>
    <string name="browseImg">Browse</string>
    <string name="desc_user_photo">user-photo</string>
    <string name="create_voter">Create voter</string>
    <string name="search_voter">Search voter</string>
    <string name="slogan">It’s in your hand to change the world</string>
    <string name="voter_details">Voter Details</string>
    <string name="sex">Sex</string>
    <string name="voter_search">VOTER SEARCH</string>
    <string name="back">Back</string>
    <string name="voters">Voters</string>
    <string name="search">Search</string>
    <string name="update_profile">Update</string>
    <string name="update_voter">Update voter</string>
    <string name="list_voter">List voter</string>
    <string name="button_cancel">Cancel</string>
    <string name="region_code">+91</string>
    <string name="btn_sendotp">Send OTP</string>
    <string name="hint_type_otp">Type OTP</string>
    <string name="btn_verify_otp">Verify OTP</string>
    <string name="create_candidates">Create candidates</string>
    <string name="date_format">YYYY-MM-DD</string>
</resources>