<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchResultActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/notosans_bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/voter_details"
                android:textSize="25sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/user_image"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/ic_launcher_photo_foreground"
                    android:contentDescription="@string/desc_user_photo"
                    android:src="@drawable/photo_frame" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_name"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_fatherName"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterFatherName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/sex"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterSex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_dob"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterDateOfBirth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_age"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterAge"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_phone"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterPhone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_aadhaar"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterAadhaar"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_state"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterState"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_district"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterDistrict"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_assembly"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/voterAssembly"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_epic"
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/VoterEpicNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:layout_margin="5dp"
                    android:textSize="18sp"
                    android:layout_weight="2"/>
            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/done_button"
                android:layout_margin="20dp"
                android:contentDescription="@string/btn_push"
                android:background="@android:color/transparent"
                android:onClick="onDone"
                android:layout_gravity="center"/>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>