<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme_activityMain"
    tools:context=".HomeScreen">

    <LinearLayout
        android:id="@+id/homeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/vectorlogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:gravity="center"
            android:text="@string/slogan"
            android:textColor="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/onCreateVoter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#CC2525"
                    android:background="@drawable/custom_create_candidate"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:src="@drawable/user"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_voter"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/josefin_regular"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/onListVoter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#E3BF0E"
                    android:background="@drawable/custom_create_candidate"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:src="@drawable/list"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/list_voter"
                        android:fontFamily="@font/josefin_regular"
                        android:textColor="@color/white"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/onUpdateVoter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#2C8AD3"
                    android:background="@drawable/custom_create_candidate"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:src="@drawable/update"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/update_voter"
                        android:layout_margin="5dp"
                        android:fontFamily="@font/josefin_regular"
                        android:textColor="@color/white"
                        android:layout_gravity="center"
                        android:gravity="center"/>
                </LinearLayout>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/onCreateCandidate"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:layout_gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="#3AD1EC"
                    android:background="@drawable/custom_create_candidate"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="10dp"
                        android:layout_gravity="center"
                        android:background="@android:color/transparent"
                        android:src="@drawable/candidate"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_candidates"
                        android:fontFamily="@font/josefin_regular"
                        android:textColor="@color/white"
                        android:gravity="center"/>
                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>